[TS-4222] Add check to see if SSLConfigParams::load_ssl_file_cb is initialized.